fix skip-button overlap in JMP

--- a/Jellypane.css
+++ b/Jellypane.css
@@ -2823,8 +2823,8 @@ body {
 	color: #fff;
 	font-weight: 500;
 	border: 1px solid #aac0f775;
-	bottom: 8em;
-	right: 9.35em;
+	bottom: 7.5em;
+	right: 7.5em;
 }
 
 .skip-button:hover,
